--- a/fit_a_straight_line.ipynb
+++ b/fit_a_straight_line.ipynb
@@ -4,7 +4,9 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyOMhqxhwJei1EA/1sf2KU/5",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,8 +18,18 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/subhiksha9/cs_lab/blob/main/fit_a_straight_line.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "id": "qZx_8Rm9BgvU"
       },
@@ -26,7 +38,8 @@
         "#importing necessary libraries\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
-        "import pandas as pd"
+        "import pandas as pd\n",
+        "from statistics import mean"
       ]
     },
     {
@@ -43,9 +56,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1yexty_tFRkb",
-        "outputId": "1a21bede-b378-4f79-ddeb-fc827361f30d"
+        "outputId": "1a09fbd0-e57b-4be4-e6e7-704941f11902"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "name": "stdout",
@@ -79,9 +92,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ON6ZVbh2GzB3",
-        "outputId": "fb4ebb76-676c-4a67-d607-6a3a9f9e0ab4"
+        "outputId": "6ec98d2a-e69d-4b78-834f-1b095af74089"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -108,9 +121,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4y-sl3vjG5DH",
-        "outputId": "eabd24c0-2f47-4187-d335-6d6dfeab5072"
+        "outputId": "3f3b46e3-7caf-4733-b2b7-14662e2036fb"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -135,9 +148,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kQYePr4TH-yK",
-        "outputId": "14cf278c-77a4-427b-b292-f15b3015982d"
+        "outputId": "2727fc2b-9048-4275-d158-92284954036d"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -145,6 +158,39 @@
           "text": [
             "yexp : [2.48235294 2.98823529 3.49411765 4.         5.01176471 6.02352941]\n",
             "ycal : [2.4 3.  3.6 4.  5.  6. ]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sse=sum((y-yexp)**2)\n",
+        "sst=sum((y-mean(y))**2)\n",
+        "ssr=sst-sse\n",
+        "r2=ssr/sst\n",
+        "print('r^2 value is : ',r2)\n",
+        "#goodness of fit\n",
+        "if(r2>0.90):\n",
+        "  print('Good Fit')\n",
+        "else:\n",
+        "  print('Not Good Fit')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QJIIvc66TbZp",
+        "outputId": "1489fcda-f3bf-47e2-b1c2-89d80e47cb50"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "r^2 value is :  0.9978413383702104\n",
+            "Good Fit\n"
           ]
         }
       ]
@@ -164,9 +210,9 @@
           "height": 265
         },
         "id": "tSLHnrlcIAIJ",
-        "outputId": "d582fdfd-0710-4bd3-9e15-0124615a8c31"
+        "outputId": "ff3bf894-a13a-4b5a-8d0a-4863983952be"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "display_data",
