--- a/karl_pearson's_coefficient.ipynb
+++ b/karl_pearson's_coefficient.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOO/f3hb0kRygu0pX6Or3IK",
+      "authorship_tag": "ABX9TyNd+a5W3vwZHHlvIoPuPs85",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,28 +28,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "OVxw5_i3U15O",
-        "outputId": "e5e395ad-d5d7-484c-8774-b289e55fb678"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Enter x values : 3 7 4 2 0 4 1 2\n",
-            "Enter y values : 11 18 9 4 7 6 3 8\n"
-          ]
-        }
-      ],
       "source": [
         "import numpy as np\n",
         "import pandas as pd\n",
-        "from math import sqrt\n",
+        "import matplotlib.pyplot as plt\n",
         "#reading inputs\n",
         "a=[int(x) for x in input(\"Enter x values : \").split(\" \")]\n",
         "b=[int(x) for x in input(\"Enter y values : \").split(\" \")]\n",
@@ -59,6 +41,24 @@
         "x2=x*x\n",
         "y2=y*y\n",
         "n=len(x)"
+      ],
+      "metadata": {
+        "id": "CslKSKl7faqg",
+        "outputId": "b40a5e46-ab70-4a66-ae3d-2a2a36cee2bf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter x values : 3 7 4 2 0 4 1 2\n",
+            "Enter y values : 11 18 9 4 7 6 3 8\n"
+          ]
+        }
       ]
     },
     {
@@ -74,13 +74,13 @@
         "print(df)"
       ],
       "metadata": {
+        "id": "k0QZhkXDfphL",
+        "outputId": "0d63f4cc-2c47-4904-c09c-656a350ff5b5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "5il59c_5ce-A",
-        "outputId": "cac22c08-fbd9-4fa0-8c16-6450f17ed50a"
+        }
       },
-      "execution_count": 2,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -102,27 +102,131 @@
     {
       "cell_type": "code",
       "source": [
-        "#calculating correlation coefficient\n",
-        "num=n*sum(xy)- (sum(x)*sum(y))\n",
-        "den=sqrt(((n*(sum(x**2)))-sum(x)**2) * ((n*(sum(y**2)))-sum(y)**2))\n",
-        "r=num/den\n",
-        "r=round(r,5)\n",
-        "print(\"correlation coefficient r is : \",r)"
+        "def sum(x):\n",
+        "  s=0\n",
+        "  for i in x:\n",
+        "    s=s+i\n",
+        "  return s\n",
+        "sumx=sum(x)\n",
+        "sumy=sum(y)\n",
+        "sumxy=sum(x*y)\n",
+        "sumxx=sum(x*x)\n",
+        "sumyy=sum(y*y)\n",
+        "print(sumx,sumy,sumxy,sumxx,sumyy)"
       ],
       "metadata": {
+        "id": "qMe_4NGehC62",
+        "outputId": "f19b1052-3040-4e2d-f6b6-7185e7665480",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "a2fn8mpfcktJ",
-        "outputId": "bcf82e1c-f804-4e24-a8a7-f1546e8f656b"
+        }
       },
-      "execution_count": 3,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "correlation coefficient r is :  0.78673\n"
+            "23 66 246 99 700\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_bar=sumx/len(x)\n",
+        "y_bar=sumy/len(x)\n",
+        "print(x_bar,y_bar)"
+      ],
+      "metadata": {
+        "id": "RsslJEfEhH8O",
+        "outputId": "fffcc144-f2e1-45ac-9a60-3a6f85d62c1d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2.875 8.25\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cov=(sumxy/len(x))-(x_bar*y_bar)\n",
+        "print(cov)"
+      ],
+      "metadata": {
+        "id": "8pIwXXwJhLpL",
+        "outputId": "a0c61fa4-6871-47a8-f121-50a215c71bf7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "7.03125\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math\n",
+        "sdx=math.sqrt((sumxx/len(x))-(x_bar**2))\n",
+        "sdy=math.sqrt((sumyy/len(x))-(y_bar**2))\n",
+        "print(sdx,sdy)"
+      ],
+      "metadata": {
+        "id": "ali8veythNLn",
+        "outputId": "20d641db-332b-47bb-a3d4-d3c02b9052b4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2.027159342528357 4.408798022137099\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "r=cov/(sdx*sdy)\n",
+        "print(r)"
+      ],
+      "metadata": {
+        "id": "0eNfGKGwhTZh",
+        "outputId": "9bcbabdf-8fb0-4586-9b5e-5bc0e75f8e34",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.7867277140983885\n"
           ]
         }
       ]
