--- a/karl_pearson's_coefficient.ipynb
+++ b/karl_pearson's_coefficient.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNd+a5W3vwZHHlvIoPuPs85",
+      "authorship_tag": "ABX9TyOcQL2ag7XG8vKk15/Ad3TZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,11 +43,11 @@
         "n=len(x)"
       ],
       "metadata": {
-        "id": "CslKSKl7faqg",
-        "outputId": "b40a5e46-ab70-4a66-ae3d-2a2a36cee2bf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "CslKSKl7faqg",
+        "outputId": "b40a5e46-ab70-4a66-ae3d-2a2a36cee2bf"
       },
       "execution_count": 7,
       "outputs": [
@@ -74,11 +74,11 @@
         "print(df)"
       ],
       "metadata": {
-        "id": "k0QZhkXDfphL",
-        "outputId": "0d63f4cc-2c47-4904-c09c-656a350ff5b5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "k0QZhkXDfphL",
+        "outputId": "0d63f4cc-2c47-4904-c09c-656a350ff5b5"
       },
       "execution_count": 8,
       "outputs": [
@@ -115,11 +115,11 @@
         "print(sumx,sumy,sumxy,sumxx,sumyy)"
       ],
       "metadata": {
-        "id": "qMe_4NGehC62",
-        "outputId": "f19b1052-3040-4e2d-f6b6-7185e7665480",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "qMe_4NGehC62",
+        "outputId": "f19b1052-3040-4e2d-f6b6-7185e7665480"
       },
       "execution_count": 10,
       "outputs": [
@@ -135,18 +135,18 @@
     {
       "cell_type": "code",
       "source": [
-        "x_bar=sumx/len(x)\n",
-        "y_bar=sumy/len(x)\n",
+        "x_bar=sumx/n\n",
+        "y_bar=sumy/n\n",
         "print(x_bar,y_bar)"
       ],
       "metadata": {
-        "id": "RsslJEfEhH8O",
-        "outputId": "fffcc144-f2e1-45ac-9a60-3a6f85d62c1d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "RsslJEfEhH8O",
+        "outputId": "3aeb386b-9dd6-4af6-fadb-7d992dbdf563"
       },
-      "execution_count": 11,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -160,17 +160,17 @@
     {
       "cell_type": "code",
       "source": [
-        "cov=(sumxy/len(x))-(x_bar*y_bar)\n",
+        "cov=(sumxy/n)-(x_bar*y_bar)\n",
         "print(cov)"
       ],
       "metadata": {
-        "id": "8pIwXXwJhLpL",
-        "outputId": "a0c61fa4-6871-47a8-f121-50a215c71bf7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "8pIwXXwJhLpL",
+        "outputId": "6685c127-e2e6-4e57-d2ac-9e82664074c8"
       },
-      "execution_count": 12,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -185,18 +185,18 @@
       "cell_type": "code",
       "source": [
         "import math\n",
-        "sdx=math.sqrt((sumxx/len(x))-(x_bar**2))\n",
-        "sdy=math.sqrt((sumyy/len(x))-(y_bar**2))\n",
+        "sdx=math.sqrt((sumxx/n)-(x_bar**2))\n",
+        "sdy=math.sqrt((sumyy/n)-(y_bar**2))\n",
         "print(sdx,sdy)"
       ],
       "metadata": {
-        "id": "ali8veythNLn",
-        "outputId": "20d641db-332b-47bb-a3d4-d3c02b9052b4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ali8veythNLn",
+        "outputId": "d8b37cf1-ec61-401b-eb87-9e910893307d"
       },
-      "execution_count": 13,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -214,13 +214,13 @@
         "print(r)"
       ],
       "metadata": {
-        "id": "0eNfGKGwhTZh",
-        "outputId": "9bcbabdf-8fb0-4586-9b5e-5bc0e75f8e34",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "0eNfGKGwhTZh",
+        "outputId": "a2bf1d2c-2af5-436b-c720-71a0f9d43044"
       },
-      "execution_count": 14,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
